--- a/Ваш БанкирЪ/MainPage.xaml
+++ b/Ваш БанкирЪ/MainPage.xaml
@@ -8,7 +8,20 @@
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-    <Grid>
-
+    <Grid Background="Black">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="265"/>
+            <RowDefinition Height="5*"/>
+        </Grid.RowDefinitions>
+        <TextBox x:Name="LoginTextBox" Height="50" Width="450" PlaceholderText="Введите логин..." MaxLength="70"
+                 HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="24" Margin="0,-260,0,0" Grid.Row="1"/>
+        <PasswordBox x:Name="PasswordBox" Height="50" Width="450" PlaceholderText="Введите пароль..." MaxLength="70"
+                 HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="24" Margin="0,-140,0,0" Grid.Row="1"/>
+        <Image Source="Assets/logo-placeholder.png"
+               HorizontalAlignment="Center" VerticalAlignment="Center" Height="265" Width="265" Margin="0,0,0,0" Grid.Row="0"/>
+        <Button x:Name="LoginButton" Width="300" Height="50" Content="Войти" 
+                HorizontalAlignment="Center" Margin="0,20,0,0" VerticalAlignment="Center" FontSize="24" Grid.Row="1" Click="loginButton_Clicked"/>
+        <Button x:Name="AddUserButton" Width="300" Height="50" Content="Добавить пользователя" 
+                HorizontalAlignment="Center" Margin="0,140,0,0" VerticalAlignment="Center" FontSize="24" Grid.Row="1" Click="addUserButton_Clicked" d:IsHidden="True"/>
     </Grid>
 </Page>
