--- a/Ваш БанкирЪ/MainPage.xaml
+++ b/Ваш БанкирЪ/MainPage.xaml
@@ -20,8 +20,17 @@
         <Image Source="Assets/logo-placeholder.png"
                HorizontalAlignment="Center" VerticalAlignment="Center" Height="265" Width="265" Margin="0,0,0,0" Grid.Row="0"/>
         <Button x:Name="LoginButton" Width="300" Height="50" Content="Войти" 
-                HorizontalAlignment="Center" Margin="0,20,0,0" VerticalAlignment="Center" FontSize="24" Grid.Row="1" Click="loginButton_Clicked"/>
-        <Button x:Name="AddUserButton" Width="300" Height="50" Content="Добавить пользователя" 
-                HorizontalAlignment="Center" Margin="0,140,0,0" VerticalAlignment="Center" FontSize="24" Grid.Row="1" Click="addUserButton_Clicked" d:IsHidden="True"/>
+                HorizontalAlignment="Center" Margin="0,20,0,0" VerticalAlignment="Center" FontSize="24" Grid.Row="1" Click="loginButton_Clicked">
+            <Button.Flyout>
+                <Flyout x:Name="PasswordErrorFlyout">
+                    <Flyout.Content>
+                        <StackPanel>
+                            <TextBlock Text="Логин или пароль введены неправильно"/>
+                            <Button Click="PasswordErrorButton_OnClick" Content="OK" Margin="0 10 0 0" />
+                            </StackPanel>
+                    </Flyout.Content>
+                </Flyout>
+            </Button.Flyout>
+            </Button>
     </Grid>
 </Page>
