--- a/Ваш БанкирЪ/MainMenuPage.xaml
+++ b/Ваш БанкирЪ/MainMenuPage.xaml
@@ -5,10 +5,106 @@
     xmlns:local="using:Ваш_БанкирЪ"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:composition="using:Windows.UI.Composition"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
+    <Page.Resources>
+        <Style TargetType="Button" x:Key="SmallWindowStyle">
+            <Setter Property="Width" Value="150"/>
+            <Setter Property="Height" Value="150"/>
+            <Setter Property="HorizontalAlignment" Value="Center"/>
+            <Setter Property="VerticalAlignment" Value="Center"/>
+            <Setter Property="Grid.Row" Value="1"/>
+        </Style>
+        <Style TargetType="Button" x:Key="LargeWindowStyle">
+            <Setter Property="Width" Value="200"/>
+            <Setter Property="Height" Value="200"/>
+            <Setter Property="HorizontalAlignment" Value="Center"/>
+            <Setter Property="VerticalAlignment" Value="Center"/>
+            <Setter Property="Grid.Row" Value="1"/>
+        </Style>
+    </Page.Resources>
+
+
     <Grid>
-        
+        <VisualStateManager.VisualStateGroups>
+            <VisualStateGroup>
+
+                <!-- Large window VisualState -->
+                <VisualState>
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowWidth="650" MinWindowHeight="600"/>
+                    </VisualState.StateTriggers>
+                    <VisualState.Setters>
+                        <Setter Target="ExitButton.Style" Value="{StaticResource LargeWindowStyle}"/>
+                        <Setter Target="ExitButton.Margin" Value="420 0 0 -190"/>
+                        <Setter Target="AddExpensesButton.Style" Value="{StaticResource LargeWindowStyle}"/>
+                        <Setter Target="AddExpensesButton.Margin" Value="0 0 0 230"/>
+                        <Setter Target="AddIncomeButton.Style" Value="{StaticResource LargeWindowStyle}"/>
+                        <Setter Target="AddIncomeButton.Margin" Value="0 0 420 230"/>
+                        <Setter Target="AddTargetButton.Style" Value="{StaticResource LargeWindowStyle}"/>
+                        <Setter Target="AddTargetButton.Margin" Value="0 0 420 -190"/>
+                        <Setter Target="FinanceAnalysisButton.Style" Value="{StaticResource LargeWindowStyle}"/>
+                        <Setter Target="FinanceAnalysisButton.Margin" Value="420 0 0 230"/>
+                        <Setter Target="SettingsButton.Style" Value="{StaticResource LargeWindowStyle}"/>
+                        <Setter Target="SettingsButton.Margin" Value="0 0 0 -190"/>
+                    </VisualState.Setters>
+
+                </VisualState>
+                <!-- Small window VisualState -->
+                <VisualState>
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowWidth="0" MinWindowHeight="0"/>
+                    </VisualState.StateTriggers>
+                    <VisualState.Setters>
+                        <Setter Target="ExitButton.Style" Value="{StaticResource SmallWindowStyle}"/>
+                        <Setter Target="ExitButton.Margin" Value="310 0 0 -130"/>
+                        <Setter Target="AddExpensesButton.Style" Value="{StaticResource SmallWindowStyle}"/>
+                        <Setter Target="AddExpensesButton.Margin" Value="0 0 0 180"/>
+                        <Setter Target="AddIncomeButton.Style" Value="{StaticResource SmallWindowStyle}"/>
+                        <Setter Target="AddIncomeButton.Margin" Value="0 0 310 180"/>
+                        <Setter Target="AddTargetButton.Style" Value="{StaticResource SmallWindowStyle}"/>
+                        <Setter Target="AddTargetButton.Margin" Value="0 0 310 -130"/>
+                        <Setter Target="FinanceAnalysisButton.Style" Value="{StaticResource SmallWindowStyle}"/>
+                        <Setter Target="FinanceAnalysisButton.Margin" Value="310 0 0 180"/>
+                        <Setter Target="SettingsButton.Style" Value="{StaticResource SmallWindowStyle}"/>
+                        <Setter Target="SettingsButton.Margin" Value="0 0 0 -130"/>
+                    </VisualState.Setters>
+                </VisualState>
+
+            </VisualStateGroup>
+        </VisualStateManager.VisualStateGroups>
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="168"/>
+            <RowDefinition Height="5*"/>
+        </Grid.RowDefinitions>
+
+        <Image Source="Assets/logo-placeholder.png"
+               HorizontalAlignment="Center" VerticalAlignment="Center"
+               Height="168" Width="168" Margin="0,0,0,0" Grid.Row="0"/>
+
+        <Button x:Name="AddExpensesButton" Click="AddExpensesButton_Click">
+            <Image Source="Assets/icons8-отменить-платеж-96.png" HorizontalAlignment="Center" VerticalAlignment="Center" Height="90" Width="90"/>
+        </Button>
+        <Button x:Name="AddIncomeButton" Click="AddIncomeButton_Click">
+            <Image Source="Assets/icons8-добавить-квитанцию-96.png" HorizontalAlignment="Center" VerticalAlignment="Center" Height="90" Width="90"/>
+        </Button>
+        <Button x:Name="FinanceAnalysisButton" Click="FinanceAnalysisButton_Click">
+            <Image Source="Assets/icons8-график-96.png" HorizontalAlignment="Center" VerticalAlignment="Center" Height="90" Width="90"/>
+        </Button>
+        <Button x:Name="AddTargetButton" Click="AddTargetButton_Click">
+            <Image Source="Assets/icons8-получить-доллары-наличными-96.png" HorizontalAlignment="Center" VerticalAlignment="Center" Height="90" Width="90"/>
+        </Button>
+        <Button x:Name="SettingsButton" Click="SettingsButton_Click">
+            <Image Source="Assets/icons8-настройки-96.png" HorizontalAlignment="Center" VerticalAlignment="Center" Height="90" Width="90"/>
+        </Button>
+        <Button x:Name="ExitButton" Click="ExitButton_Click">
+            <Image Source="Assets/icons8-выход-96.png" HorizontalAlignment="Center" VerticalAlignment="Center" Height="90" Width="90"/>
+        </Button>
+
+        <TextBlock Text="v1.0.0 Dmitry Rybalko" VerticalAlignment="Bottom" HorizontalAlignment="Center" Grid.Row="1" Margin="0 0 0 5"/>
+
     </Grid>
 </Page>
