--- a/Ваш БанкирЪ/ActiveTargetsPage.xaml
+++ b/Ваш БанкирЪ/ActiveTargetsPage.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="Ваш_БанкирЪ.AddTargetSelectPage"
+    x:Class="Ваш_БанкирЪ.ActiveTargetsPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Ваш_БанкирЪ"
@@ -8,58 +8,69 @@
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
+    <Page.Resources>
+        <Style TargetType="TextBlock" x:Key="BigWindowStyle">
+            <Setter Property="Visibility" Value="Visible"/>
+        </Style>
+        <Style TargetType="TextBlock" x:Key="SmallWindowStyle">
+            <Setter Property="Visibility" Value="Collapsed"/>
+        </Style>
+
+    </Page.Resources>
     <Grid>
         <VisualStateManager.VisualStateGroups>
             <VisualStateGroup>
-                <VisualState>
+                <VisualState x:Name="BigWindowState">
                     <VisualState.StateTriggers>
-                        <AdaptiveTrigger MinWindowWidth="1170" MinWindowHeight="600"/>
+                        <AdaptiveTrigger MinWindowWidth="1050" MinWindowHeight="600"/>
                     </VisualState.StateTriggers>
                     <VisualState.Setters>
-                        <Setter Target="PrevMonthExpensesSumTextBox.Visibility" Value="Visible"/>
-                        <Setter Target="PrevMonthExpensesTextBox.Visibility" Value="Visible"/>
                         <Setter Target="BalanceSumTextBox.Visibility" Value="Visible"/>
                         <Setter Target="BalanceTextBox.Visibility" Value="Visible"/>
+                        <Setter Target="PrevMonthExpensesSumTextBox.Visibility" Value="Visible"/>
+                        <Setter Target="PrevMonthExpensesTextBox.Visibility" Value="Visible"/>
 
-                        <Setter Target="AddTargetButton.Margin" Value="0 0 600 200"/>
-                        <Setter Target="EditTargetButton.Margin" Value="0 0 600 -200"/>
-
-                        <Setter Target="EditTargetButton.Width" Value="550"/>
-                        <Setter Target="AddTargetButton.Width" Value="550"/>
-
-                        <Setter Target="EditTargetButton.FontSize" Value="40"/>
-                        <Setter Target="AddTargetButton.FontSize" Value="40"/>
+                        <Setter Target="ActiveTargetsViewer.Margin" Value="0 0 500 0"/>
                     </VisualState.Setters>
                 </VisualState>
 
-                <VisualState>
+                <VisualState x:Name="SmallWindowState">
                     <VisualState.StateTriggers>
                         <AdaptiveTrigger MinWindowWidth="0" MinWindowHeight="0"/>
                     </VisualState.StateTriggers>
                     <VisualState.Setters>
-                        <Setter Target="PrevMonthExpensesSumTextBox.Visibility" Value="Collapsed"/>
-                        <Setter Target="PrevMonthExpensesTextBox.Visibility" Value="Collapsed"/>
                         <Setter Target="BalanceSumTextBox.Visibility" Value="Collapsed"/>
                         <Setter Target="BalanceTextBox.Visibility" Value="Collapsed"/>
+                        <Setter Target="PrevMonthExpensesSumTextBox.Visibility" Value="Collapsed"/>
+                        <Setter Target="PrevMonthExpensesTextBox.Visibility" Value="Collapsed"/>
 
-                        <Setter Target="AddTargetButton.Margin" Value="0 0 0 200"/>
-                        <Setter Target="EditTargetButton.Margin" Value="0 0 0 -200"/>
-
-                        <Setter Target="EditTargetButton.Width" Value="450"/>
-                        <Setter Target="AddTargetButton.Width" Value="450"/>
-
-                        <Setter Target="EditTargetButton.FontSize" Value="34"/>
-                        <Setter Target="AddTargetButton.FontSize" Value="34"/>
+                        <Setter Target="ActiveTargetsViewer.Margin" Value="0 0 0 0"/>
                     </VisualState.Setters>
                 </VisualState>
             </VisualStateGroup>
         </VisualStateManager.VisualStateGroups>
 
-                <Button x:Name="AddTargetButton" Content="Добавить цель" Width="550" Height="150" FontSize="40"
-                HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0 0 600 200" Click="AddTargetButton_OnClick"/>
-        <Button x:Name="EditTargetButton" Content="Просмотр активных целей" Width="550" Height="150" FontSize="40"
-                HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0 0 600 -200" Click="EditTargetButton_OnClick"/>
+        <ScrollViewer x:Name="ActiveTargetsViewer" HorizontalScrollBarVisibility="Disabled" HorizontalScrollMode="Disabled"
+                      Width="480" Height="500"
+                      HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0 0 500 0">
+            <StackPanel Padding="20">
 
+                <Grid Height="80" Margin="0 0 0 30">
+                    <ProgressBar Width="270" Height="35" Value="40"
+                                 HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                    <TextBlock Text="Автомобиль Хонда" HorizontalAlignment="Left" VerticalAlignment="Bottom" 
+                               FontSize="30" MaxWidth="270"/>
+
+                    <Button Width="60" Height="60" HorizontalAlignment="Right" >
+                        <Image Source="Assets/icons8-редактировать-96.png"/>
+                    </Button>
+                    <Button Width="60" Height="60" HorizontalAlignment="Right" Margin="0 0 70 0">
+                        <Image Source="Assets/icons8-информация-96.png"/>
+                    </Button>
+                </Grid>
+
+            </StackPanel>
+        </ScrollViewer>
         <TextBlock x:Name="BalanceTextBox" Text="Баланс:" FontSize="40" Width="250" Height="50"
                    TextAlignment="Center" VerticalAlignment="Center" HorizontalAlignment="Center"
                    Margin="600 0 0 200"/>
@@ -73,6 +84,6 @@
                    TextAlignment="Center" VerticalAlignment="Center" HorizontalAlignment="Center"
                    Margin="600 0 0 -200"/>
 
-        
+
     </Grid>
 </Page>
