--- a/Ваш БанкирЪ/AddIncomePage.xaml
+++ b/Ваш БанкирЪ/AddIncomePage.xaml
@@ -87,7 +87,6 @@
                         </StackPanel>
                     </Flyout.Content>
                 </Flyout>
-
             </Button.Flyout>
 
         </Button>
@@ -95,7 +94,9 @@
         <ScrollViewer x:Name="IncomeHistoryViewer"  HorizontalScrollBarVisibility="Disabled" HorizontalScrollMode="Disabled"
                       Height="405" Width="400" BorderThickness="5"
                       HorizontalAlignment="Center" VerticalAlignment="Center" Margin="650 0 0 65" BorderBrush="#33FFFFFF">
-
+            <StackPanel Padding="20" x:Name="ChangesHistory">
+                
+            </StackPanel>
         </ScrollViewer>
 
         <Rectangle x:Name="HistorySwitchBackground" Width="400" Height="60"
