--- a/Ваш БанкирЪ/FinanceAnalysisPage.xaml
+++ b/Ваш БанкирЪ/FinanceAnalysisPage.xaml
@@ -9,16 +9,9 @@
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-    <Grid>
-        <ch:Chart x:Name="PieChart" Width="500" Height="500" Margin="0 0 600 100" 
-                  VerticalAlignment="Center" HorizontalAlignment="Center">
-            <ch:PieSeries Margin="0 0 0 0" IndependentValuePath="DataName" 
-                          DependentValuePath="DataValue" IsSelectionEnabled="False">
-                
-            </ch:PieSeries>
-        </ch:Chart>
+    <Grid x:Name="MainGrid">
 
-                <Button x:Name="PrevMonthButton" Content="🢀" FontSize="25" Width="50" Height="50"
+        <Button x:Name="PrevMonthButton" Content="🢀" FontSize="25" Width="50" Height="50"
                 HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0 450 1000 0"
                 VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
         <Button x:Name="NextMonthButton" Content="🢂" FontSize="25" Width="50" Height="50"
