--- a/Ваш БанкирЪ/AddTargetPage.xaml
+++ b/Ваш БанкирЪ/AddTargetPage.xaml
@@ -53,12 +53,24 @@
         </VisualStateManager.VisualStateGroups>
 
         <Button x:Name="AddTargetButton"  Height="100" Content="Добавить цель" FontSize="35"
-                VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0 400 0 0"/>
+                VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0 400 0 0"
+                Click="AddTargetButton_OnClick">
+            <Button.Flyout>
+                <Flyout x:Name="AddTargetFlyout">
+                    <Flyout.Content>
+                        <StackPanel>
+                            <TextBlock x:Name="AddTargetFlyoutText"/>
+                            <Button x:Name="AddTargetFlyoutButton" Click="AddTargetFlyoutButton_OnClick" Content="OK"/>
+                        </StackPanel>
+                    </Flyout.Content>
+                </Flyout>
+            </Button.Flyout>
+        </Button>
 
-        <TextBox x:Name="TargetNameTextBox" Height="70" PlaceholderText="Введите название..." FontSize="35"
+                <TextBox x:Name="TargetNameTextBox" Height="70" PlaceholderText="Введите название..." FontSize="35"
                  VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0 0 0 450"/>
         <TextBox x:Name="TargetSumTextBox" Height="70" PlaceholderText="Введите сумму..." FontSize="35"
-                 VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0 0 0 280"/>
+                 VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0 0 0 280" BeforeTextChanging="TargetSumTextBox_OnBeforeTextChanging"/>
         <TextBox x:Name="TargetCommsTextBox" Height="210" PlaceholderText="Введите комментарий..." FontSize="35"
                  VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0 40 0 0"
                  AcceptsReturn="True" TextWrapping="Wrap" ScrollViewer.VerticalScrollBarVisibility="Auto"/>
